apps/video-statement/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-statement-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: dev-external
    alb.ingress.kubernetes.io/load-balancer-name: dev-eks-external-alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:495947449196:certificate/4a3a93b7-6a07-43f5-8d82-13ecd28be75e
    external-dns.alpha.kubernetes.io/hostname: dev-eks-videostatement.purpleray.com
    external-dns.alpha.kubernetes.io/ttl: "300"

spec:
  rules:
  - host: dev-eks-videostatement.purpleray.com
